--- a/archives/toutiao-search/2023-11-03.md
+++ b/archives/toutiao-search/2023-11-03.md
@@ -1,82 +1,92 @@
 # 2023-11-03
 
-共 239 条
+共 244 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Nov 03 2023 21:07:55 GMT+0800 (China Standard Time) -->
-1. [中方：美方应取消对古巴封锁](https://so.toutiao.com/search?keyword=中方：美方应取消对古巴封锁)
+<!-- 最后更新时间 Fri Nov 03 2023 22:00:58 GMT+0800 (China Standard Time) -->
+1. [缅甸发生冲突 三个政府控制区失守](https://so.toutiao.com/search?keyword=缅甸发生冲突+三个政府控制区失守)
 1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
 1. [一眼赏“万花” 60秒看进博](https://so.toutiao.com/search?keyword=一眼赏“万花”+60秒看进博)
-1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
-1. [浏阳国际花炮文化节开幕式](https://so.toutiao.com/search?keyword=浏阳国际花炮文化节开幕式)
-1. [流感和支原体肺炎有哪些区别](https://so.toutiao.com/search?keyword=流感和支原体肺炎有哪些区别)
+1. [苏纳克：AI或带来与核战相当的风险](https://so.toutiao.com/search?keyword=苏纳克：AI或带来与核战相当的风险)
+1. [媒体：“拾秋”虽是习俗亦有边界](https://so.toutiao.com/search?keyword=媒体：“拾秋”虽是习俗亦有边界)
+1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
 1. [中使馆回应6名中国公民在菲被绑架](https://so.toutiao.com/search?keyword=中使馆回应6名中国公民在菲被绑架)
 1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
-1. [马斯克：人工智能应配备本地开关](https://so.toutiao.com/search?keyword=马斯克：人工智能应配备本地开关)
+1. [浏阳国际花炮文化节开幕式](https://so.toutiao.com/search?keyword=浏阳国际花炮文化节开幕式)
 1. [警方辟谣长沙岳麓山有人被拐去缅甸](https://so.toutiao.com/search?keyword=警方辟谣长沙岳麓山有人被拐去缅甸)
-1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
-1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
-1. [以军袭击加沙医院 数名避难者受伤](https://so.toutiao.com/search?keyword=以军袭击加沙医院+数名避难者受伤)
 1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
-1. [美众议院投票通过对以色列援助法案](https://so.toutiao.com/search?keyword=美众议院投票通过对以色列援助法案)
-1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
+1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
+1. [《流浪地球3》定档2027年大年初一](https://so.toutiao.com/search?keyword=《流浪地球3》定档2027年大年初一)
+1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
+1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
+1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
+1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [马斯克：人工智能应配备本地开关](https://so.toutiao.com/search?keyword=马斯克：人工智能应配备本地开关)
+1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
 1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
+1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
+1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
+1. [美众议院投票通过对以色列援助法案](https://so.toutiao.com/search?keyword=美众议院投票通过对以色列援助法案)
+1. [3类人需警惕秋冬季呼吸道高发疾病](https://so.toutiao.com/search?keyword=3类人需警惕秋冬季呼吸道高发疾病)
+1. [加3万彩礼选择退婚事件有何启示](https://so.toutiao.com/search?keyword=加3万彩礼选择退婚事件有何启示)
+1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
+1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
+1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
+1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
+1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
+1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
+1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
+1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
+1. [中方回应解放军向加军机空域发照明弹](https://so.toutiao.com/search?keyword=中方回应解放军向加军机空域发照明弹)
+1. [民革中央原主席周铁农逝世](https://so.toutiao.com/search?keyword=民革中央原主席周铁农逝世)
+1. [支原体感染大爆发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大爆发或许是假象)
+1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [中方回应美媒炒中国战机拦截加军机](https://so.toutiao.com/search?keyword=中方回应美媒炒中国战机拦截加军机)
+1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
+1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
+1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
+1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
+1. [南京理工大学悄悄给贫困学生充饭卡](https://so.toutiao.com/search?keyword=南京理工大学悄悄给贫困学生充饭卡)
+1. [哈马斯称袭击加沙北部的以军部队](https://so.toutiao.com/search?keyword=哈马斯称袭击加沙北部的以军部队)
+1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
+1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
+1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
+1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
+1. [中方：美方应取消对古巴封锁](https://so.toutiao.com/search?keyword=中方：美方应取消对古巴封锁)
+1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
+1. [流感和支原体肺炎有哪些区别](https://so.toutiao.com/search?keyword=流感和支原体肺炎有哪些区别)
+1. [以军袭击加沙医院 数名避难者受伤](https://so.toutiao.com/search?keyword=以军袭击加沙医院+数名避难者受伤)
 1. [向太辟谣李连杰去世](https://so.toutiao.com/search?keyword=向太辟谣李连杰去世)
 1. [台当局：拟明年3月开放组团赴陆旅行](https://so.toutiao.com/search?keyword=台当局：拟明年3月开放组团赴陆旅行)
-1. [哈马斯称袭击加沙北部的以军部队](https://so.toutiao.com/search?keyword=哈马斯称袭击加沙北部的以军部队)
-1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
-1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
 1. [以色列与哈马斯之间的谈判仍在继续](https://so.toutiao.com/search?keyword=以色列与哈马斯之间的谈判仍在继续)
-1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
-1. [缅甸发生冲突 三个政府控制区失守](https://so.toutiao.com/search?keyword=缅甸发生冲突+三个政府控制区失守)
 1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
-1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
-1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
 1. [以军轰炸多家新闻机构在加沙办公室](https://so.toutiao.com/search?keyword=以军轰炸多家新闻机构在加沙办公室)
-1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
-1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
 1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
 1. [多地进入呼吸道传染病高发季节](https://so.toutiao.com/search?keyword=多地进入呼吸道传染病高发季节)
-1. [加3万彩礼选择退婚事件有何启示](https://so.toutiao.com/search?keyword=加3万彩礼选择退婚事件有何启示)
-1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
 1. [律师解读民警下班违规携带枪支被盗](https://so.toutiao.com/search?keyword=律师解读民警下班违规携带枪支被盗)
-1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
-1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
 1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
-1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
-1. [《流浪地球3》定档2027年大年初一](https://so.toutiao.com/search?keyword=《流浪地球3》定档2027年大年初一)
 1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
 1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
-1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
 1. [沈莹任江苏省委副书记](https://so.toutiao.com/search?keyword=沈莹任江苏省委副书记)
 1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
 1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
 1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
-1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
-1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
 1. [男子地铁被诬陷偷拍案择期宣判](https://so.toutiao.com/search?keyword=男子地铁被诬陷偷拍案择期宣判)
 1. [二十连丰！](https://so.toutiao.com/search?keyword=二十连丰！)
 1. [律师谈地铁被诬陷偷拍起诉细节](https://so.toutiao.com/search?keyword=律师谈地铁被诬陷偷拍起诉细节)
 1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
 1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
-1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
-1. [3类人需警惕秋冬季呼吸道高发疾病](https://so.toutiao.com/search?keyword=3类人需警惕秋冬季呼吸道高发疾病)
 1. [专家：不能占领加沙56年还期待和平](https://so.toutiao.com/search?keyword=专家：不能占领加沙56年还期待和平)
-1. [媒体：“拾秋”虽是习俗亦有边界](https://so.toutiao.com/search?keyword=媒体：“拾秋”虽是习俗亦有边界)
-1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
 1. [媒体：农作物遭哄抢秋收管理需加强](https://so.toutiao.com/search?keyword=媒体：农作物遭哄抢秋收管理需加强)
 1. [三轮车转弯速度过快撞上汽车](https://so.toutiao.com/search?keyword=三轮车转弯速度过快撞上汽车)
 1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
-1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
-1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
 1. [联合国一机构72名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构72名员工死于巴以冲突)
 1. [缅北一袋大米涨到1200元人民币](https://so.toutiao.com/search?keyword=缅北一袋大米涨到1200元人民币)
 1. [曾光解读冬季呼吸道传染病如何应对](https://so.toutiao.com/search?keyword=曾光解读冬季呼吸道传染病如何应对)
 1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
-1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
 1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
-1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
-1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
 1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
 1. [多国批美西方在巴以冲突上存在双标](https://so.toutiao.com/search?keyword=多国批美西方在巴以冲突上存在双标)
 1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
@@ -85,7 +95,6 @@
 1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
 1. [吴子嘉批柯文哲搞过头：支持者跑了](https://so.toutiao.com/search?keyword=吴子嘉批柯文哲搞过头：支持者跑了)
 1. [中美重启军控谈判 有何新风向](https://so.toutiao.com/search?keyword=中美重启军控谈判+有何新风向)
-1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
 1. [杨坤演出结束后被打？假的](https://so.toutiao.com/search?keyword=杨坤演出结束后被打？假的)
 1. [巴方称超1900名巴勒斯坦人被以扣押](https://so.toutiao.com/search?keyword=巴方称超1900名巴勒斯坦人被以扣押)
 1. [男子药店暴打女子 警方：两人是情侣](https://so.toutiao.com/search?keyword=男子药店暴打女子+警方：两人是情侣)
@@ -94,16 +103,13 @@
 1. [烂尾楼让业主补差价才能交付合理吗](https://so.toutiao.com/search?keyword=烂尾楼让业主补差价才能交付合理吗)
 1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
 1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
-1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
 1. [对话因高彩礼退婚辞职旅行当事人](https://so.toutiao.com/search?keyword=对话因高彩礼退婚辞职旅行当事人)
 1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
-1. [支原体感染大爆发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大爆发或许是假象)
 1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
 1. [劳荣枝案死刑复核进展如何](https://so.toutiao.com/search?keyword=劳荣枝案死刑复核进展如何)
 1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
 1. [马斯克：AI比最聪明的人聪明得多](https://so.toutiao.com/search?keyword=马斯克：AI比最聪明的人聪明得多)
 1. [美穆斯林选民：不会再把票投给拜登](https://so.toutiao.com/search?keyword=美穆斯林选民：不会再把票投给拜登)
-1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
 1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
 1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
@@ -118,7 +124,6 @@
 1. [21岁女孩因吸食依托咪酯主动自首](https://so.toutiao.com/search?keyword=21岁女孩因吸食依托咪酯主动自首)
 1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
 1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
-1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
 1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
 1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
 1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
