--- a/archives/toutiao-search/2023-11-04.md
+++ b/archives/toutiao-search/2023-11-04.md
@@ -1,74 +1,84 @@
 # 2023-11-04
 
-共 105 条
+共 114 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 04 2023 11:00:42 GMT+0800 (China Standard Time) -->
-1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
-1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
-1. [一眼赏“万花” 60秒看进博](https://so.toutiao.com/search?keyword=一眼赏“万花”+60秒看进博)
-1. [律师当街遭袭 浙江省律协启动维权](https://so.toutiao.com/search?keyword=律师当街遭袭+浙江省律协启动维权)
-1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
-1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
-1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
-1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
-1. [巴以冲突外溢是否会影响石油价格](https://so.toutiao.com/search?keyword=巴以冲突外溢是否会影响石油价格)
+<!-- 最后更新时间 Sat Nov 04 2023 12:00:41 GMT+0800 (China Standard Time) -->
+1. [S13：BLG 3-2击败GEN晋级四强](https://so.toutiao.com/search?keyword=S13：BLG+3-2击败GEN晋级四强)
+1. [肺炎支原体感染已出现叠加感染](https://so.toutiao.com/search?keyword=肺炎支原体感染已出现叠加感染)
+1. [第六届进博会布展工作全部完成](https://so.toutiao.com/search?keyword=第六届进博会布展工作全部完成)
 1. [男子药店暴打女子 警方：两人是情侣](https://so.toutiao.com/search?keyword=男子药店暴打女子+警方：两人是情侣)
+1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
+1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
+1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
+1. [巴以冲突外溢是否会影响石油价格](https://so.toutiao.com/search?keyword=巴以冲突外溢是否会影响石油价格)
+1. [蜜雪冰城回应店员被指歧视大专生](https://so.toutiao.com/search?keyword=蜜雪冰城回应店员被指歧视大专生)
+1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
 1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
 1. [天然气爆炸致多人死亡？警方辟谣](https://so.toutiao.com/search?keyword=天然气爆炸致多人死亡？警方辟谣)
+1. [被举报与同事暧昧官员上月曾公开露面](https://so.toutiao.com/search?keyword=被举报与同事暧昧官员上月曾公开露面)
 1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
-1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
 1. [《西游记》毗蓝婆菩萨扮演者去世](https://so.toutiao.com/search?keyword=《西游记》毗蓝婆菩萨扮演者去世)
-1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
-1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
 1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
-1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
-1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
-1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
+1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
 1. [真主党领导人首次公开表态巴以冲突](https://so.toutiao.com/search?keyword=真主党领导人首次公开表态巴以冲突)
+1. [以色列多地遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列多地遭火箭弹袭击)
+1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
 1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
-1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
+1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
+1. [130多名医护人员倒在加沙的血泊中](https://so.toutiao.com/search?keyword=130多名医护人员倒在加沙的血泊中)
+1. [哈马斯：准备就换俘问题完全妥协](https://so.toutiao.com/search?keyword=哈马斯：准备就换俘问题完全妥协)
+1. [《以爱为营》白鹿郑舒环演情敌](https://so.toutiao.com/search?keyword=《以爱为营》白鹿郑舒环演情敌)
 1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
 1. [《流浪地球3》定档2027年大年初一](https://so.toutiao.com/search?keyword=《流浪地球3》定档2027年大年初一)
-1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
-1. [哈马斯下属武装称打死4名以军士兵](https://so.toutiao.com/search?keyword=哈马斯下属武装称打死4名以军士兵)
-1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
-1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
 1. [以军发现并炸毁哈马斯隧道画面曝光](https://so.toutiao.com/search?keyword=以军发现并炸毁哈马斯隧道画面曝光)
-1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
-1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
+1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
+1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
 1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
-1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
-1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
-1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
-1. [以军轰炸多家新闻机构在加沙办公室](https://so.toutiao.com/search?keyword=以军轰炸多家新闻机构在加沙办公室)
-1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
-1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
-1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
-1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
-1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
-1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
-1. [S13：BLG 3-2击败GEN晋级四强](https://so.toutiao.com/search?keyword=S13：BLG+3-2击败GEN晋级四强)
+1. [律师当街遭袭 浙江省律协启动维权](https://so.toutiao.com/search?keyword=律师当街遭袭+浙江省律协启动维权)
 1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
+1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
+1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
+1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
+1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
+1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
+1. [哈马斯下属武装称打死4名以军士兵](https://so.toutiao.com/search?keyword=哈马斯下属武装称打死4名以军士兵)
+1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
+1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
 1. [支原体感染大暴发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大暴发或许是假象)
-1. [马斯克对话英国首相再次称赞中国AI](https://so.toutiao.com/search?keyword=马斯克对话英国首相再次称赞中国AI)
+1. [文班亚马关键时刻扮演超级英雄](https://so.toutiao.com/search?keyword=文班亚马关键时刻扮演超级英雄)
+1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
+1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
 1. [多国批美西方在巴以冲突上存在双标](https://so.toutiao.com/search?keyword=多国批美西方在巴以冲突上存在双标)
 1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
+1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
+1. [以军加沙行动已致9061人死亡](https://so.toutiao.com/search?keyword=以军加沙行动已致9061人死亡)
+1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
+1. [一眼赏“万花” 60秒看进博](https://so.toutiao.com/search?keyword=一眼赏“万花”+60秒看进博)
+1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
+1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
+1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
+1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
+1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
+1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
+1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
+1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
+1. [以军轰炸多家新闻机构在加沙办公室](https://so.toutiao.com/search?keyword=以军轰炸多家新闻机构在加沙办公室)
+1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
+1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [马斯克对话英国首相再次称赞中国AI](https://so.toutiao.com/search?keyword=马斯克对话英国首相再次称赞中国AI)
 1. [官方：年底实现全国范围开机看直播](https://so.toutiao.com/search?keyword=官方：年底实现全国范围开机看直播)
 1. [学生称被校内蜜雪冰城老板孩子骚扰](https://so.toutiao.com/search?keyword=学生称被校内蜜雪冰城老板孩子骚扰)
 1. [吉林一煤矿瞒报致4死事故36人被问责](https://so.toutiao.com/search?keyword=吉林一煤矿瞒报致4死事故36人被问责)
-1. [文班亚马关键时刻扮演超级英雄](https://so.toutiao.com/search?keyword=文班亚马关键时刻扮演超级英雄)
-1. [蜜雪冰城回应店员被指歧视大专生](https://so.toutiao.com/search?keyword=蜜雪冰城回应店员被指歧视大专生)
 1. [官方通报副市长与女同事暧昧：免职](https://so.toutiao.com/search?keyword=官方通报副市长与女同事暧昧：免职)
-1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
 1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
 1. [《以爱为营》郑书意时宴双向心动](https://so.toutiao.com/search?keyword=《以爱为营》郑书意时宴双向心动)
 1. [巴勒斯坦一记者及其11名亲属遇难](https://so.toutiao.com/search?keyword=巴勒斯坦一记者及其11名亲属遇难)
-1. [以军加沙行动已致9061人死亡](https://so.toutiao.com/search?keyword=以军加沙行动已致9061人死亡)
 1. [WTT冠军赛：王楚钦晋级四强](https://so.toutiao.com/search?keyword=WTT冠军赛：王楚钦晋级四强)
-1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
 1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
-1. [《以爱为营》白鹿郑舒环演情敌](https://so.toutiao.com/search?keyword=《以爱为营》白鹿郑舒环演情敌)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
 1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
 1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
@@ -105,7 +115,6 @@
 1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
 1. [巴方称超1900名巴勒斯坦人被以扣押](https://so.toutiao.com/search?keyword=巴方称超1900名巴勒斯坦人被以扣押)
 1. [央视记者回应已在巴以前线26天](https://so.toutiao.com/search?keyword=央视记者回应已在巴以前线26天)
-1. [130多名医护人员倒在加沙的血泊中](https://so.toutiao.com/search?keyword=130多名医护人员倒在加沙的血泊中)
 1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
 1. [以军袭击加沙医院 数名避难者受伤](https://so.toutiao.com/search?keyword=以军袭击加沙医院+数名避难者受伤)
 1. [沪媒：中国女足战略错招百出](https://so.toutiao.com/search?keyword=沪媒：中国女足战略错招百出)
